--- a/app/components/section/section.module.css
+++ b/app/components/section/section.module.css
@@ -21,7 +21,7 @@
     }
 
     @media (--mediaMobile), (--mediaMobileLS) {
-      padding-left: var(--spaceOuter);
+      padding-left: calc(var(--spaceOuter) + var(--space2XL));
       padding-right: var(--spaceOuter);
     }
 
